atividade traduzir para o ingles

--- a/index.html
+++ b/index.html
@@ -11,99 +11,93 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaquery.css">
-    <title>Blog de Gatos • Desafio Explorer </title>
+    <title>Cats blog • Explorer Challenge</title>
 </head>
 
 <body>
     <div class="container">
         <header>
             <nav>
-                <div class="moldura">
-                    <img src="./images/gato icoon.png">
+                <div class="frame">
+                    <img src="./images/cat-icon.png">
                 </div>
                 <input class="search-bar" type="text" placeholder="Pesquise por artigos">
-                <div class="moldura profile">
+                <div class="frame profile">
                     <img src="./images/profile.webp">
                 </div>
             </nav>
 
         </header>
         <main>
-            <img class="main-image" src="./images/gato main.jpg">
+            <img class="main-image" src="./images/cat-main.jpg">
             <div class="content-header">
                 <h1>
-                    Seriam os gatos astronautas?
+                    Are Cats Astronauts?
                 </h1>
                 <div class="like-dislike">
-                    <div class="moldura">
+                    <div class="frame">
                         <img src="./images/like.png">
                     </div>
-                    <div class="moldura">
+                    <div class="frame">
                         <img src="./images/dislike.png">
                     </div>
                 </div>
             </div>
             <p class="content-info">
-                Os gatos são animais fascinantes e cercados de mistérios. De temperamento independente e misterioso,
-                esses felinos são conhecidos por sua agilidade, elegância e um comportamento muitas vezes
-                imprevisível.
-                Contudo, recentemente, uma teoria tem ganhado espaço na internet e entre teóricos de conspiração:
-                seriam
-                os gatos astronautas?<br>
-                A teoria sugere que os gatos não são animais terrestres, mas sim seres extraterrestres enviados para
-                realizar uma missão específica em nosso planeta. Há relatos históricos que apontam para o fato de
-                que os
-                gatos eram considerados seres sagrados em diferentes culturas e até mesmo associados a figuras
-                divinas.<br>
-                Isso poderia indicar que os gatos têm uma origem muito mais mística do que se pensava anteriormente.
+                Cats are fascinating animals surrounded by mysteries. With independent and mysterious temperaments,
+                these
+                felines are known for their agility, elegance, and often unpredictable behavior.
+                However, recently, a theory has gained traction on the internet and among conspiracy theorists: are
+                cats astronauts?<br>
+                The theory suggests that cats are not terrestrial animals but extraterrestrial beings sent to
+                perform a specific mission on our planet. Historical accounts point to the fact that cats were
+                considered sacred beings in different cultures and even associated with divine figures.<br>
+                This could indicate that cats have a much more mystical origin than previously thought.
                 <br>
-                Além disso, há teóricos que acreditam que os felinos possuem habilidades telepáticas e são capazes
-                de se
-                comunicar com outras espécies alienígenas. Essa crença baseia-se em relatos de pessoas que afirmam
-                terem
-                visto gatos reagindo a estímulos que não são perceptíveis aos seres humanos, ou até mesmo se
-                comportando
-                de maneira incomum durante eventos astronômicos, como uma aurora boreal. Esses e outros indícios
-                foram
-                interpretados como sinais de que os gatos seriam seres interplanetários.
+                Additionally, there are theorists who believe that felines have telepathic abilities and can
+                communicate with other alien species. This belief is based on reports of people claiming to have
+                seen cats reacting to stimuli that are not perceptible to humans or even behaving unusually during
+                astronomical events, such as an aurora borealis. These and other clues have been interpreted as
+                signs that cats could be interplanetary beings.
             </p>
         </main>
         <section class="sidebar">
-            <h2>Artigos relacionados</h2>
+            <h2>Related Articles</h2>
             <ul>
                 <li>
-                    <img src="./images/gato 1.jpg">
+                    <img src="./images/cat-1.jpg">
                     <div class="info">
-                        <h3>Sábado preguiçoso</h3>
-                        <p>Descubra atividades interessantes para fazer com seu pet durante os finais de semana.</p>
+                        <h3>Lazy Saturday</h3>
+                        <p>Discover interesting activities to do with your pet during the weekends.</p>
                     </div>
                 </li>
                 <li>
-                    <img src="./images/gato 2.jpg">
+                    <img src="./images/cat-2.jpg">
                     <div class="info">
-                        <h3>Balaio de gatos</h3>
-                        <p>Como evitar confusões entre seus gatíneos e acostumá-los desde filhotes.</p>
+                        <h3>Cat Basket</h3>
+                        <p>How to avoid confusion among your cats and get them used to it from a young age.</p>
                     </div>
                 </li>
                 <li>
-                    <img src="./images/gato 3.jpg">
+                    <img src="./images/cat-3.jpg">
                     <div class="info">
-                        <h3>Cartela de cores</h3>
-                        <p>Seu gato é inverno intenso? Verão profundo? Descubra as cores que mais combinam com seu bichano.</p>
+                        <h3>Color Palette</h3>
+                        <p>Is your cat an intense winter? Deep summer? Discover the colors that best suit your feline.
+                        </p>
                     </div>
                 </li>
                 <li>
-                    <img src="./images/gato 4.jpg">
+                    <img src="./images/cat-4.jpg">
                     <div class="info">
-                        <h3>Os gatos sentem frio?</h3>
-                        <p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>
+                        <h3>Do Cats Feel Cold?</h3>
+                        <p>Get ready for the cold front coming to the country in the best possible way.</p>
                     </div>
                 </li>
                 <li>
-                    <img src="./images/gato 5.jpg">
+                    <img src="./images/cat-5.jpg">
                     <div class="info">
-                        <h3>Conheça o Moacir</h3>
-                        <p>Moacir é o gatinho da semana do nosso blog. Venha conhecer sua história de superação.</p>
+                        <h3>Meet Moacir</h3>
+                        <p>Moacir is the cat of the week on our blog. Come and learn about his story of overcoming.</p>
                     </div>
                 </li>
             </ul>
